[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "flake8-slots"
version = "0.1.1"
description = "A Flake8 plugin to require __slots__ to be defined for subclasses of immutable types."
readme = "README.rst"
keywords = [ "flake8",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/flake8-slots"
"Issue Tracker" = "https://github.com/domdfcoding/flake8-slots/issues"
"Source Code" = "https://github.com/domdfcoding/flake8-slots"
Documentation = "https://flake8-slots.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "flake8_slots"

[project.entry-points."flake8.extension"]
SLOTS = "flake8_slots:Plugin"
